[package]
name = "DiscordMessenger"
description = "A library that allows you to easily send discord webhooks"
repository = "https://github.com/01-Feli/DiscordMessenger-Rust"
keywords = ["webhooks", "webhook", "discord", "discord-webhook"]
version = "1.0.0"
license = "Apache-2.0"
authors = ["Feli <felinegri5@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}